
171005 Martin Mann :
 * configure.ac :
   + disable-log-coloring : sets INTARNA_LOG_COLORING for console log coloring
 * bin/IntaRNA :
   * colored log output depends now on INTARNA_LOG_COLORING macro
 * IntaRNA/AccessibilityVrna :
   + callbackForStorage() : callback function to use new VRNA API
   * fillByRNAplfold() : window-based PU computation via new VRNA API

171004 Martin Mann :
 * configure.ac :
   * bump minimal ViennaRNA version to 2.4.1 (for constraint interface) 
   * bump easylogging++ version to 9.95
   + easylogging preprocessor macros to get new version compiled
 + src/easylogging++.cc : source code of new easylogging++ version
 + src/easylogging++.LICENCE.txt : licence information of easylogging++
 + lib 'easylogging' since new version comes with source file
 * tests : adaptation to new easylogging++ version and library
 * bin/IntaRNA : 
   * adaptation to new easylogging++ version and library

version 2.0.5

170926 Martin Mann :
 * IntaRNA/PredictorMfe4d :
   * getNextBest() : BUGFIX : matrix access was not using interaction end 
     distance and interaction data was wrongly storing distance as right index;
     this was causing segfaults when requesting more than one prediction output
     (thanks to Rick Gelhausen)
 
170926 Martin Mann :
 * IntaRNA/PredictorMfe4dSeed :
 * IntaRNA/PredictorMfe2dHeuristicSeed :
   + updateOptima() to disable predTracker updates when fillHybridE() of super
     class is called; 
     --> BUGFIX : so far resulting tracker profiles were a mix of non-seeded and
         seeded interactions and thus not complementary with the predicted
         interactions

version 2.0.4

170706 Martin Mann :
 * IntaRNA/OutputHandlerCsv :
   + E_hybrid : hybrid-only energy = E - ED1 - ED2
   + E_norm : length-normalized energy = E / ln( length1*length2 )
   + E_hybridNorm : length-normalized hybrid-only energy =  E_hybrid / ln(l1*l2)

170705 Martin Mann :
 * perl/Intarna*.pl :
   * shebang corrected (thanks to Patrick Wright)
